PA_Education/TestMenifest/force-app/main/default/objects/ProcessInfoDetail__c/ProcessInfoDetail__c.object-meta.xml
<CustomObject>
    <label>제품 BOM 상세</label>
    <nameField>
        <displayFormat>PID-{000000}</displayFormat>
        <label>공정상세정보 코드</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>