PA_Education/TestMenifest/force-app/main/default/objects/ProcessInfoDetail__c/fields/BarcodeType__c.field-meta.xml
<CustomField>
    <fullName>BarcodeType__c</fullName>
    <description>해당 공정에 인식 바코드 형태. 이동식은 공정시작전 등록, 고정식은 공정 후 등록됨</description>
    <inlineHelpText>해당 공정에 인식 바코드 형태. 이동식은 공정시작전 등록, 고정식은 공정 후 등록됨</inlineHelpText>
    <label>바코드타입</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>이동식</fullName>
                <default>true</default>
                <label>이동식</label>
            </value>
            <value>
                <fullName>고정식</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>