PA_Education/TestMenifest/force-app/main/default/objects/ProcessInfoDetail__c/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <defaultValue>1</defaultValue>
    <label>소모갯수(공정별)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>