PA_Education/TestMenifest/force-app/main/default/objects/ProcessInfoDetail__c/fields/InjectPart__c.field-meta.xml
<CustomField>
    <fullName>InjectPart__c</fullName>
    <description>공정일 경우, 어떤 투입파트인지 식별한다.</description>
    <label>투입파트</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NOT_APPLICABLE</fullName>
                <default>true</default>
                <label>NOT_APPLICABLE</label>
            </value>
            <value>
                <fullName>BACK_1</fullName>
            </value>
            <value>
                <fullName>BACK_2</fullName>
            </value>
            <value>
                <fullName>FRONT_1</fullName>
            </value>
            <value>
                <fullName>FRONT_2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>