PA_Education/TestMenifest/force-app/main/default/objects/ProcessInfoDetail__c/fields/InjectPartSeq__c.field-meta.xml
<CustomField>
    <fullName>InjectPartSeq__c</fullName>
    <formula>TEXT(InjectPart__c) &amp; &quot;_&quot; &amp;  RIGHT(&quot;00&quot; &amp; TEXT(Seq__c), 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>투입파트 + 순서</label>
    <type>Text</type>
</CustomField>