PA_Education/TestMenifest/force-app/main/default/objects/ProcessInfoDetail__c/fields/IsCommon__c.field-meta.xml
<CustomField>
    <fullName>IsCommon__c</fullName>
    <formula>Item__r.IsCommon__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>공통부품여부</label>
    <type>Checkbox</type>
</CustomField>