PA_Education/TestMenifest/force-app/main/default/objects/ProcessInfoDetail__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>품목</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipName>ProcessInfoDetail</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>