PA_Education/TestMenifest/force-app/main/default/objects/ProcessInfoDetail__c/fields/ProcessInfo__c.field-meta.xml
<CustomField>
    <fullName>ProcessInfo__c</fullName>
    <label>공정정보</label>
    <referenceTo>ProcessInfo__c</referenceTo>
    <relationshipName>ProcessInfoDetail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>