PA_Education/TestMenifest/force-app/main/default/objects/ProcessInfoDetail__c/fields/RillLocation__c.field-meta.xml
<CustomField>
    <fullName>RillLocation__c</fullName>
    <label>마운터릴위치</label>
    <length>255</length>
    <type>Text</type>
</CustomField>