PA_Education/TestMenifest/force-app/main/default/objects/ProcessInfoDetail__c/fields/Standard__c.field-meta.xml
<CustomField>
    <fullName>Standard__c</fullName>
    <formula>Item__r.Standard__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>규격</label>
    <type>Text</type>
</CustomField>